# klevebrand-all-drone-controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REVIEW_PLAN.md  compile_commands.json  library.json  platformio.ini
.claude/: settings.local.json
.github/workflows/: build-deploy-platformio.yml
cmake/: KlevebrandAllDroneControllerCoreConfig.cmake.in
include/: autopilot_controller.h  base_autopilot.h  base_control_mode.h  base_drone.h  base_drone_gyro.h  base_drone_motor.h  base_drone_position.h  base_flight_mode.h  base_gyro_drone.h  base_hardware_processor.h  base_pid_repository.h  bno08x_drone_gyro.h  eeprom_pid_repository.h  flight_controller_proxy.h  flight_mode.h  flight_mode_acro.h  flight_mode_auto_level.h  gps_controller.h  gyro_pid.h  gyro_pid.hpp  pid.h  pid.hpp  pid_constants.h  pid_constants.hpp  pid_optimizer.h  pid_optimizer.hpp  pid_optimizer_simulated_annealing.h  pid_optimizer_state.h  pid_yaw_compass.h  pid_yaw_compass.hpp  servo_drone_motor.h  template_drone.h  template_drone.ipp  template_drone_gyro.h  template_drone_motor.h  template_gyro_drone.h  template_gyro_drone.ipp  template_hardware_processor.h  template_pid_repository.h  yaw_pitch_roll.h
src/: autopilot_controller.cpp  base_drone.cpp  base_drone_gyro.cpp  base_drone_motor.cpp  base_drone_position.cpp  base_hardware_processor.cpp  base_pid_repository.cpp  bno08x_drone_gyro.cpp  eeprom_pid_repository.cpp  flight_controller_proxy.cpp  gyro_pid.cpp  main.cpp  pid.cpp  pid_optimizer.cpp  pid_optimizer_simulated_annealing.cpp  pid_yaw_compass.cpp  template_gyro_drone.cpp
